/**
 * TVFactory 接口 — 抽象工厂
 * 声明工厂方法，返回抽象产品 TV
 */
public interface TVFactory {
    TV createTV();
}
